crates/brasa_resolver/tests/snapshots/resolution__ambiguous_ctor_and_bad_constraint.snap
---
source: crates/brasa_resolver/tests/resolution.rs
expression: rendered
---
[R010] Error: `Coin` is not an interface
    ╭─[ ambiguous_ctor_and_bad_constraint.brs:12:1 ]
    │
 12 │ ╭─▶ def flip<T: Coin>(value: T): T
    ┆ ┆   
 14 │ ├─▶ end
    │ │         
    │ ╰───────── constraints must name an interface
────╯
[R005] Error: ambiguous constructor `Heads`
    ╭─[ ambiguous_ctor_and_bad_constraint.brs:16:9 ]
    │
 16 │ let c = Heads
    │         ──┬──  
    │           ╰──── matches more than one enum
    │ 
    │ Note: candidates: Coin, Toss
────╯
