crates/brasa_resolver/tests/snapshots/resolution__catch_arm_regex_error.snap
---
source: crates/brasa_resolver/tests/resolution.rs
expression: dump
---
locals
  l0 param s
  l1 catch e
func params
  matches -> [l0]
exprs
  e0 s -> local l0
catch bindings
  e5 e -> l1
catch arm native errors
  e5 arm 0 type 0 -> native error string.RegexError
types
  t0 string -> builtin string
  t1 bool -> builtin bool
