crates/brasa_resolver/tests/snapshots/resolution__duplicate_definitions.snap
---
source: crates/brasa_resolver/tests/resolution.rs
expression: rendered
---
[R006] Error: duplicate definition of `n`
   ╭─[ duplicate_definitions.bras:2:19 ]
   │
 2 │ def twice(n: int, n: int): int
   │           ┬       ┬  
   │           ╰────────── previously defined here
   │                   │  
   │                   ╰── redefined here
───╯
[R006] Error: duplicate definition of `a`
   ╭─[ duplicate_definitions.bras:4:3 ]
   │
 3 │   let a = 1
   │   ─────┬────  
   │        ╰────── previously defined here
 4 │   let a = 2
   │   ─────┬────  
   │        ╰────── redefined here
───╯
[R006] Error: duplicate definition of `twice`
   ╭─[ duplicate_definitions.bras:8:1 ]
   │
 2 │ ╭───▶ def twice(n: int, n: int): int
   ┆ ┆     
 6 │ ├───▶ end
   │ │           
   │ ╰─────────── previously defined here
   │ 
 8 │   ╭─▶ def twice(): unit
 9 │   ├─▶ end
   │   │         
   │   ╰───────── redefined here
───╯
[R006] Error: duplicate definition of `twice`
    ╭─[ duplicate_definitions.bras:11:1 ]
    │
  2 │ ╭─▶ def twice(n: int, n: int): int
    ┆ ┆   
  6 │ ├─▶ end
    │ │         
    │ ╰───────── previously defined here
    │ 
 11 │     let twice = 3
    │     ───────┬──────  
    │            ╰──────── redefined here
────╯
[R006] Error: duplicate definition of `x`
    ╭─[ duplicate_definitions.bras:18:10 ]
    │
 18 │   Two(x, x) => puts x
    │       ┬  ┬  
    │       ╰───── previously defined here
    │          │  
    │          ╰── redefined here
────╯
