crates/brasa_resolver/tests/snapshots/resolution__duplicate_struct_methods.snap
---
source: crates/brasa_resolver/tests/resolution.rs
expression: rendered
---
[R006] Error: duplicate definition of `label`
   ╭─[ duplicate_struct_methods.bras:9:7 ]
   │
 5 │   def label(self): string
   │       ──┬──  
   │         ╰──── previously defined here
   │ 
 9 │   def label(self): string
   │       ──┬──  
   │         ╰──── redefined here
───╯
[R006] Error: duplicate definition of `a`
    ╭─[ duplicate_struct_methods.bras:19:7 ]
    │
 15 │   def a(self): int
    │       ┬  
    │       ╰── previously defined here
    │ 
 19 │   def a(self): int
    │       ┬  
    │       ╰── redefined here
────╯
[R006] Error: duplicate definition of `a`
    ╭─[ duplicate_struct_methods.bras:23:7 ]
    │
 15 │   def a(self): int
    │       ┬  
    │       ╰── previously defined here
    │ 
 23 │   def a(self): int
    │       ┬  
    │       ╰── redefined here
────╯
