crates/brasa_resolver/tests/snapshots/resolution__duplicate_variants_and_fields.snap
---
source: crates/brasa_resolver/tests/resolution.rs
expression: rendered
---
[R006] Error: duplicate definition of `Circle`
   ╭─[ duplicate_variants_and_fields.bras:4:3 ]
   │
 3 │   Circle(radius: float)
   │   ───┬──  
   │      ╰──── previously defined here
 4 │   Circle(r: float)
   │   ───┬──  
   │      ╰──── redefined here
───╯
[R006] Error: duplicate definition of `w`
   ╭─[ duplicate_variants_and_fields.bras:5:18 ]
   │
 5 │   Rect(w: float, w: float)
   │        ┬         ┬  
   │        ╰──────────── previously defined here
   │                  │  
   │                  ╰── redefined here
───╯
[R006] Error: duplicate definition of `x`
    ╭─[ duplicate_variants_and_fields.bras:11:3 ]
    │
 10 │   x: int
    │   ┬  
    │   ╰── previously defined here
 11 │   x: int
    │   ┬  
    │   ╰── redefined here
────╯
